--- a/index.html
+++ b/index.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-<title>Weather Imput</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <title>Weather Imput</title>
 </head>
+
 <body>
 
-<header class="container-fluid text-center">
-    <h1>Weather Dashboard</h1>
-</header>
+    <header class="container-fluid text-center">
+        <h1>Weather Dashboard</h1>
+    </header>
 
-<div class="container-fluid">
-    <div class="row">
-        <aside class="col-md-3 bg-light">
-            <h5>search for a city</h5>
-        </aside>
-        <div class="form-inline form-group">
-            <input class="form-control" type="text" id="search-value"/>
-            <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i></button>
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-md-3 bg-light">
+                <h5>search for a city</h5>
+            </aside>
+            <div class="form-inline form-group">
+                <input class="form-control" type="text" id="search-value" />
+                <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i></button>
+                <div class="card ">
+                    <div class="card-body temp">
+                    </div>
+                </div>
+                <div class="card ">
+                    <div class="card-body humid">
+                    </div>
+                  </div>
+                  <div class="card ">
+                    <div class="card-body wind">
+                    </div>
+                  </div>
+            </div>
         </div>
-    </div>
-</div>
 
 
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.js"
-  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-  crossorigin="anonymous"></script>
-<script src="script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
