--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <div class="card-body wind">
                     </div>
                   </div>
+                  <div class="card ">
+                    <div class="card-body uv">
+                    </div>
+                  </div>
             </div>
         </div>
 
