--- a/index.html
+++ b/index.html
@@ -27,21 +27,10 @@
             <div class="form-inline form-group">
                 <input class="form-control" type="text" id="search-value" />
                 <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i></button>
-                <div class="card ">
-                    <div class="card-body temp">
-                    </div>
-                </div>
-                <div class="card ">
-                    <div class="card-body humid">
-                    </div>
+
+                  <div class= "uvContainer">
                   </div>
-                  <div class="card ">
-                    <div class="card-body wind">
-                    </div>
-                  </div>
-                  <div class="card ">
-                    <div class="card-body uv">
-                    </div>
+                  <div class= "forcastContainer">
                   </div>
             </div>
         </div>
